2024-05-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

2024-05-27  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove link references to StackOverflow
	* inst/NEWS.Rd: Idem
	* inst/include/Rcpp/Module.h (S4_CppOverloadedMethods): Add cast to int
	to avoid warnings under 'clang++-17 -Wconversion -Wno-sign-conversion'
	* inst/include/Rcpp/vector/Vector.h (Vector): Idem
	* inst/include/Rcpp/module/class.h: Switch variable to size_t to avoid
	to avoid warnings under 'clang++-17 -Wconversion -Wno-sign-conversion'
	* inst/tinytest/testRcppClass/src/init.c: Add void to signature

2024-05-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

2024-05-23  Andrew Johnson  <andrew.johnson@arjohnsonau.com>

        * inst/include/Rcpp/: Added variadic templates to be used instead of
	the generated code in `Rcpp/generated` and `Rcpp/module` when
	compiling with C++11 or later.

2024-05-18  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci-4.3/Dockerfile: Add rcpp/ci-4.3 container for R 4.3.*
	* .github/workflows/ci.yaml (jobs): Add rcpp/ci-4.3 to matrix

2024-05-16  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-03-05  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci/Dockerfile: Switch the base container to r2u
	* docker/plus/Dockerfile: Given r2u, install more binaries

	* README.md: Add r-universe badge

2024-02-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

	* inst/include/Rcpp/r/headers.h: Set R_NO_REMAP (and MAXELTSIZE)
	only if not already defined (as will be needed with R 4.4.0)

2024-01-09  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Update usage numbers
